# TBetaGenerator

./: CMakeLists.txt  LICENSE  README.md  TBetaGenerator.hpp
examples/: generatorExample.cpp  test1.cpp  test2.cpp
